--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,608 @@
 <resources>
-    <string name="app_name">Cram</string>
+    <string name="app_name">벼락치기</string>
+    <string name="default_web_client">545673499784-5nd0fqq8qk0iv9huq8t6v3742kcd1223.apps.googleusercontent.com</string>
+    <string name="SERVERIP">34.239.114.112</string>
+
+    <string-array name="filter">
+        <item>18년</item>
+        <item>18놈</item>
+        <item>18새끼</item>
+        <item>ㄱㅐㅅㅐㄲl</item>
+        <item>ㄱㅐㅈㅏ</item>
+        <item>가슴만져</item>
+        <item>가슴빨아</item>
+        <item>가슴빨어</item>
+        <item>가슴조물락</item>
+        <item>가슴주물럭</item>
+        <item>가슴쪼물딱</item>
+        <item>가슴쪼물락</item>
+        <item>가슴핧아</item>
+        <item>가슴핧어</item>
+        <item>강간</item>
+        <item>개가튼년</item>
+        <item>개가튼뇬</item>
+        <item>개같은년</item>
+        <item>개걸레</item>
+        <item>개고치</item>
+        <item>개너미</item>
+        <item>개넘</item>
+        <item>개년</item>
+        <item>개놈</item>
+        <item>개늠</item>
+        <item>개똥</item>
+        <item>개떵</item>
+        <item>개떡</item>
+        <item>개라슥</item>
+        <item>개보지</item>
+        <item>개부달</item>
+        <item>개부랄</item>
+        <item>개불랄</item>
+        <item>개붕알</item>
+        <item>개새</item>
+        <item>개세</item>
+        <item>개쓰래기</item>
+        <item>개쓰레기</item>
+        <item>개씁년</item>
+        <item>개씁블</item>
+        <item>개씁자지</item>
+        <item>개씨발</item>
+        <item>개씨블</item>
+        <item>개자식</item>
+        <item>개자지</item>
+        <item>개잡년</item>
+        <item>개젓가튼넘</item>
+        <item>개좆</item>
+        <item>개지랄</item>
+        <item>개후라년</item>
+        <item>개후라들놈</item>
+        <item>개후라새끼</item>
+        <item>걔잡년</item>
+        <item>거시기</item>
+        <item>걸래년</item>
+        <item>걸레같은년</item>
+        <item>걸레년</item>
+        <item>걸레핀년</item>
+        <item>게부럴</item>
+        <item>게세끼</item>
+        <item>게이</item>
+        <item>게새끼</item>
+        <item>게늠</item>
+        <item>게자식</item>
+        <item>게지랄놈</item>
+        <item>고환</item>
+        <item>공지</item>
+        <item>공지사항</item>
+        <item>귀두</item>
+        <item>깨쌔끼</item>
+        <item>난자마셔</item>
+        <item>난자먹어</item>
+        <item>난자핧아</item>
+        <item>내꺼빨아</item>
+        <item>내꺼핧아</item>
+        <item>내버지</item>
+        <item>내자지</item>
+        <item>내잠지</item>
+        <item>내조지</item>
+        <item>너거애비</item>
+        <item>노옴</item>
+        <item>누나강간</item>
+        <item>니기미</item>
+        <item>니뿡</item>
+        <item>니뽕</item>
+        <item>니씨브랄</item>
+        <item>니아범</item>
+        <item>니아비</item>
+        <item>니애미</item>
+        <item>니애뷔</item>
+        <item>니애비</item>
+        <item>니할애비</item>
+        <item>닝기미</item>
+        <item>닌기미</item>
+        <item>니미</item>
+        <item>닳은년</item>
+        <item>덜은새끼</item>
+        <item>돈새끼</item>
+        <item>돌으년</item>
+        <item>돌은넘</item>
+        <item>돌은새끼</item>
+        <item>동생강간</item>
+        <item>동성애자</item>
+        <item>딸딸이</item>
+        <item>똥구녁</item>
+        <item>똥꾸뇽</item>
+        <item>똥구뇽</item>
+        <item>똥</item>
+        <item>띠발뇬</item>
+        <item>띠팔</item>
+        <item>띠펄</item>
+        <item>띠풀</item>
+        <item>띠벌</item>
+        <item>띠벨</item>
+        <item>띠빌</item>
+        <item>마스터</item>
+        <item>막간년</item>
+        <item>막대쑤셔줘</item>
+        <item>막대핧아줘</item>
+        <item>맛간년</item>
+        <item>맛없는년</item>
+        <item>맛이간년</item>
+        <item>멜리스</item>
+        <item>미친구녕</item>
+        <item>미친구멍</item>
+        <item>미친넘</item>
+        <item>미친년</item>
+        <item>미친놈</item>
+        <item>미친눔</item>
+        <item>미친새끼</item>
+        <item>미친쇄리</item>
+        <item>미친쇠리</item>
+        <item>미친쉐이</item>
+        <item>미친씨부랄</item>
+        <item>미튄</item>
+        <item>미티넘</item>
+        <item>미틴</item>
+        <item>미틴넘</item>
+        <item>미틴년</item>
+        <item>미틴놈</item>
+        <item>미틴것</item>
+        <item>백보지</item>
+        <item>버따리자지</item>
+        <item>버지구녕</item>
+        <item>버지구멍</item>
+        <item>버지냄새</item>
+        <item>버지따먹기</item>
+        <item>버지뚫어</item>
+        <item>버지뜨더</item>
+        <item>버지물마셔</item>
+        <item>버지벌려</item>
+        <item>버지벌료</item>
+        <item>버지빨아</item>
+        <item>버지빨어</item>
+        <item>버지썰어</item>
+        <item>버지쑤셔</item>
+        <item>버지털</item>
+        <item>버지핧아</item>
+        <item>버짓물</item>
+        <item>버짓물마셔</item>
+        <item>벌창같은년</item>
+        <item>벵신</item>
+        <item>병닥</item>
+        <item>병딱</item>
+        <item>병신</item>
+        <item>보쥐</item>
+        <item>보지</item>
+        <item>보지핧어</item>
+        <item>보짓물</item>
+        <item>보짓물마셔</item>
+        <item>봉알</item>
+        <item>부랄</item>
+        <item>불알</item>
+        <item>붕알</item>
+        <item>붜지</item>
+        <item>뷩딱</item>
+        <item>븅쉰</item>
+        <item>븅신</item>
+        <item>빙띤</item>
+        <item>빙신</item>
+        <item>빠가십새</item>
+        <item>빠가씹새</item>
+        <item>빠구리</item>
+        <item>빠굴이</item>
+        <item>뻑큐</item>
+        <item>뽕알</item>
+        <item>뽀지</item>
+        <item>뼝신</item>
+        <item>사까시</item>
+        <item>상년</item>
+        <item>새꺄</item>
+        <item>새뀌</item>
+        <item>새끼</item>
+        <item>색갸</item>
+        <item>색끼</item>
+        <item>색스</item>
+        <item>색키</item>
+        <item>샤발</item>
+        <item>서버</item>
+        <item>써글</item>
+        <item>써글년</item>
+        <item>성교</item>
+        <item>성폭행</item>
+        <item>세꺄</item>
+        <item>세끼</item>
+        <item>섹스</item>
+        <item>섹스하자</item>
+        <item>섹스해</item>
+        <item>섹쓰</item>
+        <item>섹히</item>
+        <item>수셔</item>
+        <item>쑤셔</item>
+        <item>쉐끼</item>
+        <item>쉑갸</item>
+        <item>쉑쓰</item>
+        <item>쉬발</item>
+        <item>쉬방</item>
+        <item>쉬밸년</item>
+        <item>쉬벌</item>
+        <item>쉬불</item>
+        <item>쉬붕</item>
+        <item>쉬빨</item>
+        <item>쉬이발</item>
+        <item>쉬이방</item>
+        <item>쉬이벌</item>
+        <item>쉬이불</item>
+        <item>쉬이붕</item>
+        <item>쉬이빨</item>
+        <item>쉬이팔</item>
+        <item>쉬이펄</item>
+        <item>쉬이풀</item>
+        <item>쉬팔</item>
+        <item>쉬펄</item>
+        <item>쉬풀</item>
+        <item>쉽쌔</item>
+        <item>시댕이</item>
+        <item>시발</item>
+        <item>시발년</item>
+        <item>시발놈</item>
+        <item>시발새끼</item>
+        <item>시방새</item>
+        <item>시밸</item>
+        <item>시벌</item>
+        <item>시불</item>
+        <item>시붕</item>
+        <item>시이발</item>
+        <item>시이벌</item>
+        <item>시이불</item>
+        <item>시이붕</item>
+        <item>시이팔</item>
+        <item>시이펄</item>
+        <item>시이풀</item>
+        <item>시팍새끼</item>
+        <item>시팔</item>
+        <item>시팔넘</item>
+        <item>시팔년</item>
+        <item>시팔놈</item>
+        <item>시팔새끼</item>
+        <item>시펄</item>
+        <item>실프</item>
+        <item>십8</item>
+        <item>십때끼</item>
+        <item>십떼끼</item>
+        <item>십버지</item>
+        <item>십부랄</item>
+        <item>십부럴</item>
+        <item>십새</item>
+        <item>십세이</item>
+        <item>십셰리</item>
+        <item>십쉐</item>
+        <item>십자석</item>
+        <item>십자슥</item>
+        <item>십지랄</item>
+        <item>십창녀</item>
+        <item>십창</item>
+        <item>십탱</item>
+        <item>십탱구리</item>
+        <item>십탱굴이</item>
+        <item>십팔새끼</item>
+        <item>ㅆㅂ</item>
+        <item>ㅆㅂㄹㅁ</item>
+        <item>ㅆㅂㄻ</item>
+        <item>ㅆㅣ</item>
+        <item>쌍넘</item>
+        <item>쌍년</item>
+        <item>쌍놈</item>
+        <item>쌍눔</item>
+        <item>쌍보지</item>
+        <item>쌔끼</item>
+        <item>쌔리</item>
+        <item>쌕스</item>
+        <item>쌕쓰</item>
+        <item>썅년</item>
+        <item>썅놈</item>
+        <item>썅뇬</item>
+        <item>썅늠</item>
+        <item>쓉새</item>
+        <item>쓰바새끼</item>
+        <item>쓰브랄쉽세</item>
+        <item>씌발</item>
+        <item>씌팔</item>
+        <item>씨가랭넘</item>
+        <item>씨가랭년</item>
+        <item>씨가랭놈</item>
+        <item>씨발</item>
+        <item>씨발년</item>
+        <item>씨발롬</item>
+        <item>씨발병신</item>
+        <item>씨방새</item>
+        <item>씨방세</item>
+        <item>씨밸</item>
+        <item>씨뱅가리</item>
+        <item>씨벌</item>
+        <item>씨벌년</item>
+        <item>씨벌쉐이</item>
+        <item>씨부랄</item>
+        <item>씨부럴</item>
+        <item>씨불</item>
+        <item>씨불알</item>
+        <item>씨붕</item>
+        <item>씨브럴</item>
+        <item>씨블</item>
+        <item>씨블년</item>
+        <item>씨븡새끼</item>
+        <item>씨빨</item>
+        <item>씨이발</item>
+        <item>씨이벌</item>
+        <item>씨이불</item>
+        <item>씨이붕</item>
+        <item>씨이팔</item>
+        <item>씨파넘</item>
+        <item>씨팍새끼</item>
+        <item>씨팍세끼</item>
+        <item>씨팔</item>
+        <item>씨펄</item>
+        <item>씨퐁넘</item>
+        <item>씨퐁뇬</item>
+        <item>씨퐁보지</item>
+        <item>씨퐁자지</item>
+        <item>씹년</item>
+        <item>씹물</item>
+        <item>씹미랄</item>
+        <item>씹버지</item>
+        <item>씹보지</item>
+        <item>씹부랄</item>
+        <item>씹브랄</item>
+        <item>씹빵구</item>
+        <item>씹뽀지</item>
+        <item>씹새</item>
+        <item>씹새끼</item>
+        <item>씹세</item>
+        <item>씹쌔끼</item>
+        <item>씹자석</item>
+        <item>씹자슥</item>
+        <item>씹자지</item>
+        <item>씹지랄</item>
+        <item>씹창</item>
+        <item>씹창녀</item>
+        <item>씹탱</item>
+        <item>씹탱굴이</item>
+        <item>씹탱이</item>
+        <item>씹팔</item>
+        <item>아가리</item>
+        <item>애무</item>
+        <item>애미</item>
+        <item>애미랄</item>
+        <item>애미보지</item>
+        <item>애미씨뱅</item>
+        <item>애미자지</item>
+        <item>애미잡년</item>
+        <item>애미좃물</item>
+        <item>애비</item>
+        <item>애자</item>
+        <item>양아치</item>
+        <item>어미강간</item>
+        <item>어미따먹자</item>
+        <item>어미쑤시자</item>
+        <item>영자</item>
+        <item>엄창</item>
+        <item>에미</item>
+        <item>에비</item>
+        <item>엔플레버</item>
+        <item>엠플레버</item>
+        <item>염병</item>
+        <item>염병할</item>
+        <item>염뵹</item>
+        <item>엿먹어라</item>
+        <item>오랄</item>
+        <item>오르가즘</item>
+        <item>왕버지</item>
+        <item>왕자지</item>
+        <item>왕잠지</item>
+        <item>왕털버지</item>
+        <item>왕털보지</item>
+        <item>왕털자지</item>
+        <item>왕털잠지</item>
+        <item>우미쑤셔</item>
+        <item>운디네</item>
+        <item>운영자</item>
+        <item>유두</item>
+        <item>유두빨어</item>
+        <item>유두핧어</item>
+        <item>유방</item>
+        <item>유방만져</item>
+        <item>유방빨아</item>
+        <item>유방주물럭</item>
+        <item>유방쪼물딱</item>
+        <item>유방쪼물럭</item>
+        <item>유방핧아</item>
+        <item>유방핧어</item>
+        <item>육갑</item>
+        <item>이그니스</item>
+        <item>이년</item>
+        <item>이프리트</item>
+        <item>자기핧아</item>
+        <item>자지</item>
+        <item>자지구녕</item>
+        <item>자지구멍</item>
+        <item>자지꽂아</item>
+        <item>자지넣자</item>
+        <item>자지뜨더</item>
+        <item>자지뜯어</item>
+        <item>자지박어</item>
+        <item>자지빨아</item>
+        <item>자지빨아줘</item>
+        <item>자지빨어</item>
+        <item>자지쑤셔</item>
+        <item>자지쓰레기</item>
+        <item>자지정개</item>
+        <item>자지짤라</item>
+        <item>자지털</item>
+        <item>자지핧아</item>
+        <item>자지핧아줘</item>
+        <item>자지핧어</item>
+        <item>작은보지</item>
+        <item>잠지</item>
+        <item>잠지뚫어</item>
+        <item>잠지물마셔</item>
+        <item>잠지털</item>
+        <item>잠짓물마셔</item>
+        <item>잡년</item>
+        <item>잡놈</item>
+        <item>저년</item>
+        <item>점물</item>
+        <item>젓가튼</item>
+        <item>젓가튼쉐이</item>
+        <item>젓같내</item>
+        <item>젓같은</item>
+        <item>젓까</item>
+        <item>젓나</item>
+        <item>젓냄새</item>
+        <item>젓대가리</item>
+        <item>젓떠</item>
+        <item>젓마무리</item>
+        <item>젓만이</item>
+        <item>젓물</item>
+        <item>젓물냄새</item>
+        <item>젓밥</item>
+        <item>정액마셔</item>
+        <item>정액먹어</item>
+        <item>정액발사</item>
+        <item>정액짜</item>
+        <item>정액핧아</item>
+        <item>정자마셔</item>
+        <item>정자먹어</item>
+        <item>정자핧아</item>
+        <item>젖같은</item>
+        <item>젖까</item>
+        <item>젖밥</item>
+        <item>젖탱이</item>
+        <item>조개넓은년</item>
+        <item>조개따조</item>
+        <item>조개마셔줘</item>
+        <item>조개벌려조</item>
+        <item>조개속물</item>
+        <item>조개쑤셔줘</item>
+        <item>조개핧아줘</item>
+        <item>조까</item>
+        <item>조또</item>
+        <item>족같내</item>
+        <item>족까</item>
+        <item>족까내</item>
+        <item>존나</item>
+        <item>존나게</item>
+        <item>존니</item>
+        <item>졸라</item>
+        <item>좀마니</item>
+        <item>좀물</item>
+        <item>좀쓰레기</item>
+        <item>좁빠라라</item>
+        <item>좃가튼뇬</item>
+        <item>좃간년</item>
+        <item>좃까</item>
+        <item>좃까리</item>
+        <item>좃깟네</item>
+        <item>좃냄새</item>
+        <item>좃넘</item>
+        <item>좃대가리</item>
+        <item>좃도</item>
+        <item>좃또</item>
+        <item>좃만아</item>
+        <item>좃만이</item>
+        <item>좃만한것</item>
+        <item>좃만한쉐이</item>
+        <item>좃물</item>
+        <item>좃물냄새</item>
+        <item>좃보지</item>
+        <item>좃부랄</item>
+        <item>좃빠구리</item>
+        <item>좃빠네</item>
+        <item>좃빠라라</item>
+        <item>좃털</item>
+        <item>좆같은놈</item>
+        <item>좆같은새끼</item>
+        <item>좆까</item>
+        <item>좆까라</item>
+        <item>좆나</item>
+        <item>좆년</item>
+        <item>좆도</item>
+        <item>좆만아</item>
+        <item>좆만한년</item>
+        <item>좆만한놈</item>
+        <item>좆만한새끼</item>
+        <item>좆먹어</item>
+        <item>좆물</item>
+        <item>좆밥</item>
+        <item>좆빨아</item>
+        <item>좆새끼</item>
+        <item>좆털</item>
+        <item>좋만한것</item>
+        <item>주글년</item>
+        <item>주길년</item>
+        <item>쥐랄</item>
+        <item>지랄</item>
+        <item>지랼</item>
+        <item>지럴</item>
+        <item>지뢀</item>
+        <item>쪼까튼</item>
+        <item>쪼다</item>
+        <item>쪼다새끼</item>
+        <item>찌랄</item>
+        <item>찌질이</item>
+        <item>창남</item>
+        <item>창녀</item>
+        <item>창녀버지</item>
+        <item>창년</item>
+        <item>처먹고</item>
+        <item>처먹을</item>
+        <item>쳐먹고</item>
+        <item>쳐쑤셔박어</item>
+        <item>촌씨브라리</item>
+        <item>촌씨브랑이</item>
+        <item>촌씨브랭이</item>
+        <item>크리토리스</item>
+        <item>큰보지</item>
+        <item>클리토리스</item>
+        <item>트랜스젠더</item>
+        <item>페니스</item>
+        <item>항문수셔</item>
+        <item>항문쑤셔</item>
+        <item>허덥</item>
+        <item>허버리년</item>
+        <item>허벌년</item>
+        <item>허벌보지</item>
+        <item>허벌자식</item>
+        <item>허벌자지</item>
+        <item>허접</item>
+        <item>허젚</item>
+        <item>허졉</item>
+        <item>허좁</item>
+        <item>헐렁보지</item>
+        <item>혀로보지핧기</item>
+        <item>호냥년</item>
+        <item>호로</item>
+        <item>호로새끼</item>
+        <item>호로자슥</item>
+        <item>호로자식</item>
+        <item>호로짜식</item>
+        <item>호루자슥</item>
+        <item>호모</item>
+        <item>호졉</item>
+        <item>호좁</item>
+        <item>후라덜넘</item>
+        <item>후장</item>
+        <item>후장꽂아</item>
+        <item>후장뚫어</item>
+        <item>흐접</item>
+        <item>흐젚</item>
+        <item>흐졉</item>
+        <item>bitch</item>
+        <item>fuck</item>
+        <item>fuckyou</item>
+        <item>nflavor</item>
+        <item>penis</item>
+        <item>pennis</item>
+        <item>pussy</item>
+        <item>sex</item>
+    </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
